Added a lot of films and removed a couple due to rights complaints from Twitch. I'm trying to only use films from this list: https://archive.org/details/feature_films?tab=collection&page=2&and%5B%5D=subject%3A%22sci-fi%22&and%5B%5D=subject%3A%22Sci-Fi%22&and%5B%5D=subject%3A%22sci+fi%22&and%5B%5D=subject%3A%22scifi%22 that are marked as Public Domain
Video duration stuff added
Shuffle data on load
Moved curtain up and background to bottom of element so it always lines up

--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,23 @@ canvas {
   top: 0;
 }
 
+#info {
+  color: white;
+  font-family: sans-serif;
+  position: absolute;
+  text-align: left;
+  top: calc(100vh - 226px);
+  width: 100vw;
+}
+
+#info dt {
+  font-style: italic;
+  float: left;
+}
+
+#info dd {
+  text-indent: 15px;}
+
 #next {
   height: 250px;
   opacity: 0;
@@ -47,7 +64,7 @@ canvas {
 
 .curtain {
   background: url("../images/curtain.gif") repeat;
-  height: 100vh;
+  height: calc(100vh - 226px);
   position: absolute;
   top: 0;
   transition: all 1s ease-in;
@@ -56,7 +73,7 @@ canvas {
 }
 
 .curtain.left {
-  background-position: top right;
+  background-position: bottom right;
   left: 0;
 }
 
@@ -65,7 +82,7 @@ canvas {
 }
 
 .curtain.right {
-  background-position: top left;
+  background-position: bottom left;
   left: 50%;
 }
 
